--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/karatechops/grommet-horizontal-template.git"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "clone-stats": "0.0.1",
     "compression": "^1.4.4",
     "cookie-parser": "^1.3.4",
